--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
     <input type="submit" id='submit-button' value="Create" />
   </form>
 
+  <form id="edit-ramen">
+    <h4>Update the Featured Ramen</h4>
+    <label for="edit-rating">Rating: </label>
+    <input type="number" name="edit-rating" id="edit-rating" />
+    <label for="edit-comment">Comment: </label>
+    <textarea name="edit-comment" id="edit-comment"></textarea>
+    <input type="submit" value="Update" />
+  </form>
+  
+  <form id="delete-ramen">
+    <input type="submit" id="delete-button" value="Delete">
+  </form>
+
 </body>
 
 </html>
